--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
+### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -20,7 +21,6 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -50,6 +50,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+cover/
 
 # Translations
 *.mo
@@ -60,7 +61,6 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-dtb/static
 
 # Flask stuff:
 instance/
@@ -73,6 +73,7 @@ instance/
 docs/_build/
 
 # PyBuilder
+.pybuilder/
 target/
 
 # Jupyter Notebook
@@ -83,7 +84,9 @@ profile_default/
 ipython_config.py
 
 # pyenv
-.python-version
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -103,14 +106,13 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env*
+.env
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
-dtb_venv/
 
 # Spyder project settings
 .spyderproject
@@ -129,12 +131,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-.DS_Store
 
-#PyCharm
-.idea/
+# pytype static type analyzer
+.pytype/
 
-#Docker
-.Dockerfile.swp
-bot.session*
+# Cython debug symbols
+cython_debug/
+localtunnel
 uuid/
+nginx/
