--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,74 @@
 version: "3.8"
 
+x-django: &django
+  build: .
+  volumes:
+    - .:/code
+    - ./uuid:/uuid
+  env_file:
+    - ./.env
+    - ./.env.db
+
+
 services:
   db:
-    image: postgres:12
-    container_name: dtb_postgres
+    image: postgres:14-alpine
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
     env_file:
-      - ./.env
+      - ./.env.db
     ports:
-      - "5433:5432"
+      - 5432
   redis:
     image: redis:alpine
-    container_name: dtb_redis
-  web:
-    build: .
-    container_name: dtb_django
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+  localtunnel:
+    build: localtunnel
+    command: bash -c "lt --subdomain `cat uuid/.env.uuid|cut -c6-` --local-host web --port 8000"
     volumes:
-      - .:/code
+      - ./uuid:/uuid
+  web:
+    <<: *django
+    command: python manage.py runserver_plus 0.0.0.0:8000
     ports:
       - "8000:8000"
-    env_file:
-      - ./.env
     depends_on:
+      - localtunnel
       - db
-  bot:
-    build: .
-    container_name: dtb_bot
-    command: python run_pooling.py
-    env_file:
-      - ./.env
+  yarn:
+    image: node
+    command: bash -c "yarn --cwd /app install && yarn --cwd /app run dev"
+    volumes:
+      - ./react-modules:/app
     depends_on:
       - web
+  #  bot:
+  #    build: .
+  #    container_name: dtb_bot
+  #    command: python run_pooling.py
+  #    env_file:
+  #      - ./.env
+  #    depends_on:
+  #      - web
   celery:
-    build: .
-    container_name: dtb_celery
+    <<: *django
     command: celery -A dtb worker --loglevel=INFO
-    volumes:
-      - .:/code
-    env_file:
-      - ./.env
     depends_on:
       - redis
       - web
-  celery-beat:
-    build: .
-    container_name: dtb_beat
-    command: celery -A dtb beat -l info --scheduler django_celery_beat.schedulers.DatabaseScheduler
-    volumes:
-      - .:/code
-    env_file:
-      - ./.env
-    depends_on:
-      - redis
-      - celery
-      - web
-
+      - db
+#  celery-beat:
+#    build: .
+#    container_name: dtb_beat
+#    command: celery -A dtb beat -l info --scheduler django_celery_beat.schedulers.DatabaseScheduler
+#    volumes:
+#      - .:/code
+#    env_file:
+#      - ./.env
+#    depends_on:
+#      - redis
+#      - celery
+#      - web
+#
 volumes:
   postgres_data:
