--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,9 @@
 version: "3.8"
 
 x-django: &django
-  build: .
+  build:
+    context: .
+    dockerfile: Dockerfile.prod
   env_file:
     - ./.env.prod
     - ./.env.db
