--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,7 +23,7 @@ services:
     image: redis:alpine
   web:
     <<: *django
-    command: gunicorn django.wsgi:application --bind 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     expose:
       - 8000
     depends_on:
