--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -16,6 +16,6 @@ COPY requirements.txt /code/
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 COPY . /code
-COPY --from=react /app/static /code/react-modules/static
+COPY --from=react /app /code/react-modules
 
 ENTRYPOINT ["/code/entrypoint.prod.sh"]
